@@ -47,7 +47,7 @@
 		<code>uninstall.php</code>
 	</uninstall>
 
-	<install for="2.0 RC2">
+	<install for="2.0 RC2, 2.0 RC3">
 		<readme parsebbc="true">readme-install.bbc</readme>
 		<modification>SMF2-0/Sources.xml</modification>
 		<modification>SMF2-0/BoardsAndTopics.xml</modification>
@@ -63,7 +63,7 @@
 		<!-- <require-file name="PrettyUrls.french.php" destination="$languagedir" /> -->
 		<database>SMF2-0/install.php</database>
 	</install>
-	<uninstall for="2.0 RC2">
+	<uninstall for="2.0 RC2, 2.0 RC3">
 		<readme parsebbc="true">readme-uninstall.bbc</readme>
 		<modification reverse="true">SMF2-0/Sources.xml</modification>
 		<modification reverse="true">SMF2-0/BoardsAndTopics.xml</modification>
