@@ -15,4 +15,4 @@ Pretty URLs will work with SMF 1.1 and 2.0. It requires an Apache webserver with
 Need help? [b][url=http://code.google.com/p/prettyurls/wiki/TroubleShooting]Check the trouble shooting page first![/url][/b] 
 
 Pretty URLs is released under a [url=http://prettyurls.googlecode.com/svn/trunk/LICENCE]new BSD licence[/url]
-Copyright (c) 2006-2009 [url=http://prettyurls.googlecode.com/svn/trunk/CONTRIBUTORS]The Pretty URLs Contributors[/url]
+Copyright (c) 2006-2010 [url=http://prettyurls.googlecode.com/svn/trunk/CONTRIBUTORS]The Pretty URLs Contributors[/url]
