@@ -19,5 +19,5 @@ Filters installed:
 [hr]
 
 Version 1.0 RC
-Copyright (c) 2006-2008, Dannii Willis
+Copyright (c) 2006-2010, Dannii Willis
 [url=http://code.google.com/p/prettyurls]Pretty URLs project home[/url]
